--- a/tlaa/main.tex
+++ b/tlaa/main.tex
@@ -75,45 +75,47 @@ types of an arbitrary algebra, which then can be shown to be functional.
 In Lean, the main definitions of such a construction would look like this, with
 \texttt{S'0} being the erased types, \texttt{Sw} being the wellformedness predicate,
 and \texttt{rel} being the recursor relation:
-
-
 \noindent
 \begin{minipage}{.3\textwidth}
 \begin{lstlisting}
 inductive S'0 : bool → Type
-| nil : S'0 ff
-| ext : S'0 ff → S'0 tt
-        → S'0 ff
-| unit : S'0 ff → S'0 tt
-| pi : S'0 ff → S'0 tt
-       → S'0 tt → S'0 tt
+| nil : S'0 ⊥
+| ext : S'0 ⊥ → S'0 ⊤
+        → S'0 ⊥
+| unit : S'0 ⊥ → S'0 ⊤
+| pi : S'0 ⊥ → S'0 ⊤
+       → S'0 ⊤ → S'0 ⊤
 \end{lstlisting}
 \end{minipage} \hfill
 \begin{minipage}{.68\textwidth}
 \begin{lstlisting}
-def Sw0_argtype (b : bool) : Type :=
-if b then unit else S'.C
+def Sw0_argtype (b : bool) : Type := if b then unit else S'.C
+
 inductive Sw : Π b, S'0 b → Sw0_argtype b → Prop
-| nil : Sw ff S'0.nil ()
-| ext : Π Γ A xΓ, Sw ff Γ xΓ → Sw tt A Γ → Sw ff (S'.ext Γ A) ()
-| unit : Π Γ xΓ, Sw ff Γ xΓ → Sw tt (S'.unit Γ) Γ
-| pi : Π Γ A B xΓ, Sw ff Γ xΓ → Sw tt A Γ → Sw tt B (S'.ext Γ A) → Sw tt (S'.pi Γ A B) Γ
+| nil : Sw ⊥ S'0.nil ()
+| ext : Π Γ A xΓ, Sw ⊥ Γ xΓ → Sw ⊤ A Γ → Sw ⊥ (S'.ext Γ A) ()
+| unit : Π Γ xΓ, Sw ⊥ Γ xΓ → Sw ⊤ (S'.unit Γ) Γ
+| pi : Π Γ A B xΓ, Sw ⊥ Γ xΓ → Sw ⊤ A Γ → Sw ⊤ B (S'.ext Γ A) → Sw ⊤ (S'.pi Γ A B) Γ
 \end{lstlisting}
 \end{minipage}
 \noindent\begin{minipage}{\textwidth}\begin{lstlisting}
-parameters (M : CT)
-def rel_arg (b : bool) : bool → Type := if b then M.C else Σ γ, M.T γ
+def rel_arg (b : bool) : Type := if b then M.C else Σ γ, M.T γ
+
 inductive rel : Π b, S'0 b → rel_arg b → Prop
-| nil : rel ff S'0.nil M.nil
-| ext : Π Γ A γ a, rel ff Γ γ → rel tt A ⟨γ, a⟩ → rel ff (S'0.ext Γ A) (M.ext γ a)
-| unit : Π Γ γ, rel ff Γ γ → rel tt (S'0.unit Γ) ⟨γ, M.unit γ⟩
-| pi : Π Γ A B γ a b, rel ff Γ γ → rel tt A ⟨γ, a⟩ → rel tt B ⟨M.ext γ a, b⟩
-        → rel tt (S'0.pi Γ A B) ⟨γ, M.pi γ a b⟩
+| nil : rel ⊥ S'0.nil M.nil
+| ext : Π Γ A γ a, rel ⊥ Γ γ → rel ⊤ A ⟨γ, a⟩ → rel ⊥ (S'0.ext Γ A) (M.ext γ a)
+| unit : Π Γ γ, rel ⊥ Γ γ → rel ⊤ (S'0.unit Γ) ⟨γ, M.unit γ⟩
+| pi : Π Γ A B γ a b, rel ⊥ Γ γ → rel ⊤ A ⟨γ, a⟩ → rel ⊤ B ⟨M.ext γ a, b⟩
+        → rel ⊤ (S'0.pi Γ A B) ⟨γ, M.pi γ a b⟩
 \end{lstlisting}
 \end{minipage}
+\textbf{This raises the question about how to prove that this strategy works for \emph{every
+possible inductive-inductive type} instead of specific examples.}
 
 
 \section{Contributions}
+
+
 
 \section{Future Work}
 
