--- a/tlaa/references.bib
+++ b/tlaa/references.bib
@@ -104,13 +104,17 @@
   school = {University of Nottingham},
   year = {2016}
 }
-@Misc{hiit,
-  author =	 {Ambrus Kaposi and András Kovács},
-  title =	 {A syntax for higher inductive-inductive types},
-  howpublished = {Submitted for publication},
-  month =	 {January},
-  year =	 {2018},
+@article{qiit,
+  title={Constructing quotient inductive-inductive types},
+  author={Kaposi, Ambrus and Kov{\'a}cs, Andr{\'a}s and Altenkirch, Thorsten},
+  journal={Proceedings of the ACM on Programming Languages},
+  volume={3},
+  number={POPL},
+  pages={2},
+  year={2019},
+  publisher={ACM}
 }
+
 @Article{bernardy12parametricity,
 	author = {Jean-Philippe Bernardy and Patrik Jansson and Ross Paterson},
 	title = {Proofs for Free --- Parametricity for Dependent Types},
