--- a/tlaa/references.bib
+++ b/tlaa/references.bib
@@ -114,7 +114,12 @@
   year={2019},
   publisher={ACM}
 }
-
+@article{types2018,
+  title={Reducing Inductive-Inductive Types to Indexed Inductive Types},
+  author={Altenkirch, Thorsten and Kaposi, Ambrus and Kov{\'a}cs, Andr{\'a}s and others},
+  journal={TYPES 2018},
+  year={2018}
+}
 @Article{bernardy12parametricity,
 	author = {Jean-Philippe Bernardy and Patrik Jansson and Ross Paterson},
 	title = {Proofs for Free --- Parametricity for Dependent Types},
