--- a/aaa/main.tex
+++ b/aaa/main.tex
@@ -33,11 +33,9 @@
 % Include macros
 % \input{macros}
 \authorrunning{Kaposi, Kovács, and Lafont}
-\titlerunning{Constructing the universal inductive-inductive datatype from
-  indexed-inductive datatypes}
+\titlerunning{Closed Inductive-Inductive Types are Reducible to Indexed Inductive Types}
 
-\title{Constructing the universal Inductive-Inductive datatype from
-  indexed-inductive datatypes}
+\title{Closed Inductive-Inductive Types are Reducible to Indexed Inductive Types}
 
 \author{
    Ambrus Kaposi\inst{1}
