--- a/aaa/references.bib
+++ b/aaa/references.bib
@@ -131,3 +131,10 @@
 	pages = {107--152},
 	url     = {https://publications.lib.chalmers.se/cpl/record/index.xsql?pubid=135303}
 }
+
+@book{streicher2012semantics,
+  title={Semantics of type theory: correctness, completeness and independence results},
+  author={Streicher, Thomas},
+  year={2012},
+  publisher={Springer Science \& Business Media}
+}
