--- a/aaa/abstract-AAA.tex
+++ b/aaa/abstract-AAA.tex
@@ -12,7 +12,7 @@ extensionality.
 \subsubsection*{Signatures and initial algebras for IITs}
 
 In \cite{qiit}, a syntax for signatures of quotient inductive-inductive types
-(QIITs) is given. It is given as domain-specific type theory, where every typing
+(QIITs) is given as a domain-specific type theory, where every typing
 context can be viewed as a listing of type, value and equality constructors. It
 is also shown that initial algebras for all QIITs can be constructed from terms
 of the syntax of signatures.
@@ -39,7 +39,7 @@ relations.
 However, the initiality proof in our case is simpler than in general, because
 the theory of II signatures does not contain $\beta$-rules, and thus it is
 possible to construct the initial model using only $\beta$-normal preterms,
-avoiding the usage of quotients.
+avoiding the use of quotients.
 
 Hence, we first define normal preterms and typing relations on them, using indexed
 inductive types. Then, we use well-typed preterms to construct a model of the theory
