--- a/aaa/abstract-AAA.tex
+++ b/aaa/abstract-AAA.tex
@@ -71,9 +71,10 @@ the presyntax.
 Streicher's previous construction \cite{streicher2012semantics} used a family of
 partial functions from the presyntax to a given model, which functions are later
 shown to be total on well-formed presyntax. In contrast, we use a
-\emph{relation} which is later shown to be functional. In our experience, this
-approach is more convenient in a mechanized setting, and it could be applicable
-in initiality proofs for other type theories as well.
+\emph{relation} which is later shown to be functional. For our use case, the
+relational approach seemed to be more convenient in a mechanized setting, and it
+could be worthwhile to try it in initiality proofs for other type theories as
+well.
 
 \subsubsection*{Formalization}
 We formalized in Agda
