--- a/aaa/abstract-AAA.tex
+++ b/aaa/abstract-AAA.tex
@@ -79,7 +79,7 @@ well.
 \subsubsection*{Formalization}
 We formalized in Agda
 (\url{https://github.com/amblafont/UniversalII/blob/cwf-syntax/Cwf/}) the
-construction of the syntax of IIT signatures. Separately, there is an Agda
+construction of the syntax of II signatures. Separately, there is an Agda
 formalization for \cite{qiit} in
 \url{https://bitbucket.org/akaposi/finitaryqiit}, which includes the
 construction of IITs from the syntax of II signatures.
