--- a/tlaa/main.tex
+++ b/tlaa/main.tex
@@ -19,7 +19,7 @@
 \newcommand{\nil}{\mathsf{nil}}
 \newcommand{\ext}{\mathsf{ext}}
 \newcommand{\unit}{\mathsf{unit}}
-\newcommand{\piT}{\mathsf{piT}}
+\newcommand{\piT}{\mathsf{pi}}
 \newcommand{\UU}{\mathcal{U}}
 
 \usepackage{listings}
